api/deploy/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
      app: storyprotocol
  name: edge 
---
