api/deploy/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: edge 
  name: api-server
  labels:
    app: storyprotocol
    service: api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      service: api-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  minReadySeconds: 2
  template:
    metadata:
      labels:
        service: api-server
    spec:
      containers:
      - image: 243963068353.dkr.ecr.us-west-2.amazonaws.com/api-server:latest
        imagePullPolicy: "Always"
        name: api-server
        ports:
        - containerPort: 8090
        args:
          - "/app/api/build/server"
          - "--config=/app/api/config/base.yaml,/app/api/config/prod.yaml"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: edge 
  name: streamer 
  labels:
    app: storyprotocol
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  minReadySeconds: 2
  template:
    spec:
      containers:
      - image: 243963068353.dkr.ecr.us-west-2.amazonaws.com/streamer:latest
        imagePullPolicy: "Always"
        name: streamer 
        args:
          - "/app/api/build/streamer"
          - "--config=/app/api/config/base.yaml,/app/api/config/prod.yaml"
