api/deploy/base/psql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psqldeployment
  namespace: edge
  labels:
    app: psql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
  template:
    metadata:
      labels:
        app: psql
    spec:
      containers:
      - name: postgres
        image: postgres:14-alpine
        resources:
          requests:
            cpu: 500m
            memory: 1024Mi
          limits:
            cpu: 500m
            memory: 2048Mi
        livenessProbe:
          exec:
            command:
            - psql
            - -U
            - postgres
            - -c
            - SELECT 1
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
