api/deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: edge 
  name: api-server
  labels:
    app: storyprotocol 
    service: api-server
spec:
  ports:
  - name: api-server
    port: 8090
    targetPort: 8090
  type: NodePort
  selector:
    service: api-server
---
